--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </header>
     <body ng-app="myApp">
         <div class="loginContainer container">
-            <div class="loginContainer__content">
-                <form action="" ng-controller="loginCtrl">
+            <div class="loginContainer__content" ng-controller="loginCtrl">
+                <form>
                     <h1>Login</h1>
                     <p class="loginContainer__content__errorText">Either the email or the password is wrong. Please try again.</p>
-                    <label for="email"></label>
+                    <label for="email">E-Mail:</label> <br>
                     <input id="email" name="email" ng-model="data.email" placeholder="e-mail" type="email" ng-change="checkValidation()" required/><br>
-                    <label for="password"></label>
+                    <label for="password">Password:</label> <br>
                     <input id="password" name="password" ng-model="data.password" placeholder="password" type="password" ng-change="checkValidation()" minlength="8" required/><br>
                     <label class="checkbox" for="signIn"> stay sign in
                         <input type="checkbox" id="signIn" name="signIn" ng-model="data.signIn" ng-change="checkValidation()">
@@ -29,7 +29,7 @@
                 <p>OR</p>
                 <div>login with <img src="./icons/facebook.png" ng-click="clickIconLogin()"> or  <img src="./icons/google.png" ng-click="clickIconLogin()"></div>
                 <p>OR</p>
-                <div>if you have not registert yet, do it now <a href="">here</a>.</div>
+                <div>if you have not registert yet, do it now <a href=""  onclick="document.getElementById('alert').classList.add('alert--show');document.getElementById('alert__register').classList.add('alert--show');">here</a>.</div>
             </div>
         </div>
         <div class="siteContainer container">
@@ -42,18 +42,18 @@
             <div class="alert__login alert__container" id="alert__login">
                 <p>In the moment it is impossible to login with Google or Facebook. <br>
                     We will work on it, so it es possible as soon as possible.</p>
-                <button class="alert__button button">ok</button>
+                <button class="alert__button button" onclick="document.getElementById('alert').classList.remove('alert--show');document.getElementById('alert__login').classList.remove('alert--show');">ok</button>
             </div>
             <div class="alert__register alert__container" id="alert__register">
                 <form action="">
                     <h1>Register</h1>
-                    <label for="firstname"></label>
+                    <label for="firstname">Firstname:</label>
                     <input id="firstname" name="firstname" placeholder="firstname" type="text" required/><br>
-                    <label for="lastname"></label>
+                    <label for="lastname">Lastname:</label>
                     <input id="lastname" name="lastname" placeholder="lastname" type="text" required/><br>
-                    <label for="emailRegister"></label>
+                    <label for="emailRegister">E-Mail:</label>
                     <input id="emailRegister" name="emailRegister" placeholder="e-mail" type="email" required/><br>
-                    <label for="passortRegister"></label>
+                    <label for="passortRegister">Password:</label>
                     <input id="passortRegister" name="passortRegister" placeholder="passwort" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required/><br>
                     <label class="checkbox" for="agree"> I agree to <a>User Agreement</a>, <a>Privacy Policy</a> and <a>Cookie Policy</a>.
                         <input type="checkbox" id="agree" name="agree" value="agree" required>
