reorganize the files

--- a/src/website.html
+++ b/src/website.html
@@ -2,18 +2,18 @@
 <header>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./website.css">
+    <link rel="stylesheet" href="css/website.css">
 
     <title>LoginProject</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script type="text/javascript" src="logoutController.js"></script>
+    <script type="text/javascript" src="js/logoutController.js"></script>
 </header>
 <body ng-app="myApp" ng-controller="logoutCtrl">
     <nav class="navbar">
         <div class="container-fluid">
             <div class="navbar__header">
-                <img src="./icons/octopus.png">
+                <img src="../icons/octopus.png">
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
