--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
     <header>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="css/index.css">
 
         <title>LoginProject</title>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-        <script type="text/javascript" src="loginController.js"></script>
-        <script type="text/javascript" src="registerController.js"></script>
+        <script type="text/javascript" src="js/loginController.js"></script>
+        <script type="text/javascript" src="js/registerController.js"></script>
     </header>
     <body ng-app="myApp">
         <div class="loginContainer container">
@@ -27,14 +27,14 @@
                     <button class="loginContainer__content__button button" ng-click="login()">login</button>
                 </form>
                 <p>OR</p>
-                <div>login with <img src="./icons/facebook.png" ng-click="clickIconLogin()"> or  <img src="./icons/google.png" ng-click="clickIconLogin()"></div>
+                <div>login with <img src="../icons/facebook.png" ng-click="clickIconLogin()"> or  <img src="../icons/google.png" ng-click="clickIconLogin()"></div>
                 <p>OR</p>
                 <div>if you have not registert yet, do it now <a href=""  onclick="document.getElementById('alert').classList.add('alert--show');document.getElementById('alert__register').classList.add('alert--show');">here</a>.</div>
             </div>
         </div>
         <div class="siteContainer container">
             <div class="siteContainer__content">
-                <img src="./icons/octopus.png">
+                <img src="../icons/octopus.png">
                 <p>This is the awesome Kraken site. <br> Login and see what you can do!</p>
             </div>
         </div>
